--- a/AntLifeConsole/AntLifeConsole.csproj
+++ b/AntLifeConsole/AntLifeConsole.csproj
@@ -3,7 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>_12._Polimorfizm</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AntLifeCL\AntLifeCL.csproj" />
+  </ItemGroup>
 
 </Project>
