--- a/Zadanie_9.01/Zadanie_9.01.csproj
+++ b/Zadanie_9.01/Zadanie_9.01.csproj
@@ -8,4 +8,14 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="ico\play.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="ico\play.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 </Project>
