Using application like Windows Services

--- a/Microsoft_Learn/13. Improve how forms and validation work in Blazor web apps/BlazingPizzaSite/BlazingPizzaSite.csproj
+++ b/Microsoft_Learn/13. Improve how forms and validation work in Blazor web apps/BlazingPizzaSite/BlazingPizzaSite.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.8" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
     <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
+    <PackageReference Include="Topshelf" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
