--- a/.gitignore
+++ b/.gitignore
@@ -334,3 +334,4 @@ ASALocalRun/
 .localhistory/
 /C#_BOOKS/FREEMAN - Pro ASP.NET Core 6/CHAPTER_18-29_WebApp/WebApp/wwwroot/lib/
 /C#_BOOKS/FREEMAN - Pro ASP.NET Core 6/CHAPTER_30-31_Filters_Forms/WebApp/wwwroot/lib/
+/C#_BOOKS/FREEMAN - Pro ASP.NET Core 6/CHAPTER_30-31_Filters_Forms/WebApp/yarn.lock
