Added libman and installed bootstrap using this tool Added bootstrap to gitignore Configured MVC and RazorPages services and middleware Added tsconfig.json for add typescript to solution Added support for typescript and also script to show text after click button Created Home Controller and View Added _viewImports and _layout and _viewStart Added same view like in MVC but using RazorPage

--- a/.gitignore
+++ b/.gitignore
@@ -335,3 +335,4 @@ ASALocalRun/
 /C#_BOOKS/FREEMAN - Pro ASP.NET Core 6/CHAPTER_18-29_WebApp/WebApp/wwwroot/lib/
 /C#_BOOKS/FREEMAN - Pro ASP.NET Core 6/CHAPTER_30-31_Filters_Forms/WebApp/wwwroot/lib/
 /C#_BOOKS/FREEMAN - Pro ASP.NET Core 6/CHAPTER_30-31_Filters_Forms/WebApp/yarn.lock
+/C#_BOOKS/FREEMAN - Pro ASP.NET Core 6/CHAPTER_32-39_Blazor_Identity/Advanced-WebApp/Advanced/wwwroot/lib/
