--- a/.gitignore
+++ b/.gitignore
@@ -336,3 +336,4 @@ ASALocalRun/
 /C#_BOOKS/FREEMAN - Pro ASP.NET Core 6/CHAPTER_30-31_Filters_Forms/WebApp/wwwroot/lib/
 /C#_BOOKS/FREEMAN - Pro ASP.NET Core 6/CHAPTER_30-31_Filters_Forms/WebApp/yarn.lock
 /C#_BOOKS/FREEMAN - Pro ASP.NET Core 6/CHAPTER_32-39_Blazor_Identity/Advanced-WebApp/Advanced/wwwroot/lib/
+/C#_BOOKS/FREEMAN - Pro ASP.NET Core 6/CHAPTER_32-39_Blazor_Identity/Advanced-WebApp/Advanced/package-lock.json
